force-app/main/default/objects/Opportunity/fields/OppText__c.field-meta.xml
<CustomField>
    <fullName>OppText__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>OppText</label>
    <length>12</length>
    <type>Text</type>
</CustomField>