force-app/main/default/objects/Opportunity/fields/Time_Picklist__c.field-meta.xml
<CustomField>
    <fullName>Time_Picklist__c</fullName>
    <label>Time Picklist</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Time</valueSetName>
    </valueSet>
</CustomField>