force-app/main/default/objects/Opportunity/fields/xyz_SGUID_Opp__c.field-meta.xml
<CustomField>
    <fullName>xyz_SGUID_Opp__c</fullName>
    <caseSensitive>true</caseSensitive>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>xyz SGUID Opp</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>