force-app/main/default/objects/Opportunity/recordTypes/Opp_RT_1.recordType-meta.xml
<RecordType>
    <fullName>Opp_RT_1</fullName>
    <active>true</active>
    <businessProcess>Business Process 2</businessProcess>
    <label>Opp RT 1</label>
</RecordType>