force-app/main/default/objects/Opportunity/recordTypes/Opp_RT_2.recordType-meta.xml
<RecordType>
    <fullName>Opp_RT_2</fullName>
    <active>true</active>
    <businessProcess>Business Process 1</businessProcess>
    <label>Opp RT 2</label>
</RecordType>