force-app/main/default/objects/Opportunity/validationRules/TestCharacters.validationRule-meta.xml
<ValidationRule>
    <fullName>TestCharacters</fullName>
    <active>false</active>
    <errorConditionFormula>NOT(Description =  $Label.TestCharacter)</errorConditionFormula>
    <errorMessage>Description is not equal to TestCharacter Custom Label</errorMessage>
</ValidationRule>